# test_aiohttp

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: __main__.py  client.py  database.db  db.py  server.py
